--- a/bridal.html
+++ b/bridal.html
@@ -183,19 +183,19 @@
             </div>
             <!-- INNER PAGE BANNER END -->
 
-       <section class="apsara-bridal" id="bridal-groom-services">
+      <section class="apsara-bridal" id="bridal-groom-services">
 
-  <div class="apsara-bridal-header">
+  <div class="apsara-bridal-header" data-anim="fade-up">
     <span class="tag">Wedding Elegance</span>
     <h2>Bridal & Groom Services</h2>
     <p>Tailored bridal rituals and groom grooming packages — handcrafted to make every moment picture-perfect.</p>
   </div>
 
   <!-- Row: Pre-Bridal Express -->
-  <div class="apsara-row">
-    <!-- <div class="apsara-row-media">
-      <img src="https://images.unsplash.com/photo-1544005313-94ddf0286df2?w=1200&q=80&auto=format&fit=crop" alt="Pre-Bridal treatments - face and body">
-    </div> -->
+  <div class="apsara-row" data-anim="fade-right">
+    <div class="apsara-row-media">
+      <img src="https://images.unsplash.com/photo-1544005313-94ddf0286df2?w=1200&q=80&auto=format&fit=crop" alt="">
+    </div>
     <div class="apsara-row-content">
       <h3>Pre-Bridal Express Package</h3>
       <p>Quick, rejuvenating treatments to prepare skin and hair for upcoming events — face polishing, body polishing, hair spa, manicure and pedicure, and de-tanning rituals.</p>
@@ -210,16 +210,16 @@
     </div>
   </div>
 
-  <!-- Row: Pre-Bridal - 5 Days Before -->
-  <div class="apsara-row reverse">
-    <!-- <div class="apsara-row-media">
-      <img src="https://images.unsplash.com/photo-1525034475138-5b4b8c9f9a6a?w=1200&q=80&auto=format&fit=crop" alt="Pre bridal premium package">
-    </div> -->
+  <!-- Row: Pre-Bridal 5 Days Before -->
+  <div class="apsara-row reverse" data-anim="fade-left">
+    <div class="apsara-row-media">
+      <img src="https://images.unsplash.com/photo-1525034475138-5b4b8c9f9a6a?w=1200&q=80&auto=format&fit=crop" alt="">
+    </div>
     <div class="apsara-row-content">
       <h3>Pre-Bridal Premium (5 Days Before)</h3>
-      <p>An intensive pre-wedding ritual to deliver a luminous bridal glow: Vitamin-C Glow (micro-derma & mask), de-tan, body polishing, full waxing, manicure, pedicure and hair spa.</p>
+      <p>An intensive pre-wedding ritual to deliver a luminous bridal glow: Vitamin-C Glow, de-tan, body polishing, full waxing, manicure, pedicure and hair spa.</p>
       <ul class="service-list">
-        <li>Vitamin-C Glow Facial (Micro Derma Peel & Mask)</li>
+        <li>Vitamin-C Glow Facial</li>
         <li>De-Tan (Face / Neck / Body)</li>
         <li>Body Polishing + Waxing</li>
         <li>Pedicure & Manicure</li>
@@ -229,14 +229,14 @@
     </div>
   </div>
 
-  <!-- Row: Bride & Groom Package -->
-  <div class="apsara-row">
-    <!-- <div class="apsara-row-media">
-      <img src="https://images.unsplash.com/photo-1517433456452-f9633a875f6f?w=1200&q=80&auto=format&fit=crop" alt="Bride and groom package styling">
-    </div> -->
+  <!-- Row: Bride & Groom Exclusive -->
+  <div class="apsara-row" data-anim="zoom-in">
+    <div class="apsara-row-media">
+      <img src="https://images.unsplash.com/photo-1517433456452-f9633a875f6f?w=1200&q=80&auto=format&fit=crop" alt="">
+    </div>
     <div class="apsara-row-content">
       <h3>Bride & Groom Exclusive Package</h3>
-      <p>Complete wedding-day preparation for couples: facials, body polish, mani/pedi, hair services, haircut & beard grooming — curated to keep both bride and groom camera-ready.</p>
+      <p>Complete wedding-day preparation: facials, body polish, mani/pedi, hair services, haircut & beard grooming — curated to keep both bride and groom camera-ready.</p>
       <ul class="service-list">
         <li>De-Tan & Customized Facial</li>
         <li>Body Polishing</li>
@@ -248,38 +248,39 @@
     </div>
   </div>
 
-  <!-- Row: Bridal Add-ons -->
-  <div class="apsara-row reverse">
-    <!-- <div class="apsara-row-media">
-      <img src="https://images.unsplash.com/photo-1524504388940-b1c1722653e1?w=1200&q=80&auto=format&fit=crop" alt="Bridal makeup and saree draping">
-    </div> -->
+  <!-- Row: Makeup Styling -->
+  <div class="apsara-row reverse" data-anim="fade-up">
+    <div class="apsara-row-media">
+      <img src="https://images.unsplash.com/photo-1524504388940-b1c1722653e1?w=1200&q=80&auto=format&fit=crop" alt="">
+    </div>
     <div class="apsara-row-content">
       <h3>Makeup & Styling Add-ons</h3>
-      <p>Flexible add-ons to complete your wedding look — party makeup, guest makeup, saree draping, and extra hairstyle options for multiple events.</p>
+      <p>Party makeup, guest makeup, saree draping, and extra hairstyle options for multiple events.</p>
       <ul class="service-list">
-        <li>Party Makeup with Hairstyle & Saree Draping</li>
-        <li>Guest Makeup with Hairstyle & Saree Draping</li>
+        <li>Party Makeup + Saree Draping</li>
+        <li>Guest Makeup + Draping</li>
         <li>Extra Saree Draping</li>
         <li>Extra Hairstyle (curls, braids, updos)</li>
-        <li>Baby-Shower & Special Event Styling</li>
+        <li>Baby-Shower & Event Styling</li>
       </ul>
       <a class="btn" href="#booking">Add Styling Add-ons</a>
     </div>
   </div>
 
-  <!-- Row: Custom Requests -->
-  <div class="apsara-row">
-    <!-- <div class="apsara-row-media">
-      <img src="https://images.unsplash.com/photo-1506086679523-4f4b7d9e3a6a?w=1200&q=80&auto=format&fit=crop" alt="Custom bridal requests and trial">
-    </div> -->
+  <!-- Row: Custom Trials -->
+  <div class="apsara-row" data-anim="slide-up">
+    <div class="apsara-row-media">
+      <img src="https://images.unsplash.com/photo-1506086679523-4f4b7d9e3a6a?w=1200&q=80&auto=format&fit=crop" alt="">
+    </div>
     <div class="apsara-row-content">
       <h3>Custom Packages & Trials</h3>
-      <p>Personalised trial sessions, multi-day pre-bridal plans and bespoke add-ons available. We tailor timing, team, and products for each bride and groom to ensure flawless delivery on the day.</p>
+      <p>Personalised trial sessions, multi-day pre-bridal plans and bespoke add-ons with fully tailored timing and products.</p>
       <a class="btn ghost" href="#contact">Request a Trial</a>
     </div>
   </div>
 
 </section>
+
 
 
 
