--- a/facial.html
+++ b/facial.html
@@ -183,7 +183,7 @@
             </div>
             <!-- INNER PAGE BANNER END -->
 
-          <section class="apsara-facials" id="facial-services">
+       <section class="apsara-facials" id="facial-services">
   <div class="facial-header">
     <span class="facial-tag">Radiance Rituals</span>
     <h2>Signature Facial Services</h2>
@@ -194,9 +194,7 @@
 
     <!-- Card 1 -->
     <article class="facial-card">
-      <!-- <div class="facial-media">
-        <img src="https://images.unsplash.com/photo-1544005313-94ddf0286df2?w=1200&q=80&auto=format&fit=crop" alt="Normal Facial">
-      </div> -->
+      <img src="https://i.imgur.com/2oVGlGq.jpeg" alt="Normal Facial">
       <div class="facial-body">
         <h3>Normal Facial</h3>
         <p>A classic treatment to cleanse, hydrate and refresh skin for a balanced, healthy glow.</p>
@@ -205,9 +203,7 @@
 
     <!-- Card 2 -->
     <article class="facial-card">
-      <!-- <div class="facial-media">
-        <img src="https://images.unsplash.com/photo-1556228720-4a5b0b1ffb4e?w=1200&q=80&auto=format&fit=crop" alt="Fruit Facial">
-      </div> -->
+      <img src="https://i.imgur.com/Qe0QW6a.jpeg" alt="Fruit Facial">
       <div class="facial-body">
         <h3>Fruit Facial</h3>
         <p>Gentle enzyme-based exfoliation using fruit extracts to brighten and smooth the skin.</p>
@@ -216,9 +212,7 @@
 
     <!-- Card 3 -->
     <article class="facial-card">
-      <!-- <div class="facial-media">
-        <img src="https://images.unsplash.com/photo-1503602642458-232111445657?w=1200&q=80&auto=format&fit=crop" alt="Skin Whitening Facial">
-      </div> -->
+      <img src="https://i.imgur.com/4VnkqOe.jpeg" alt="Skin Whitening Facial">
       <div class="facial-body">
         <h3>Skin Whitening Facial</h3>
         <p>Targeted brightening protocols to reduce pigmentation and even out skin tone.</p>
@@ -227,9 +221,7 @@
 
     <!-- Card 4 -->
     <article class="facial-card">
-      <!-- <div class="facial-media">
-        <img src="https://images.unsplash.com/photo-1542838132-92c53300491e?w=1200&q=80&auto=format&fit=crop" alt="Wine Facial">
-      </div> -->
+      <img src="https://i.imgur.com/aHfdRkC.jpeg" alt="Wine Facial">
       <div class="facial-body">
         <h3>Wine Facial</h3>
         <p>Antioxidant-rich treatment to boost radiance and improve skin elasticity.</p>
@@ -238,9 +230,7 @@
 
     <!-- Card 5 -->
     <article class="facial-card">
-      <!-- <div class="facial-media">
-        <img src="https://images.unsplash.com/photo-1543168259-312f1eb565f6?w=1200&q=80&auto=format&fit=crop" alt="Diamond Facial">
-      </div> -->
+      <img src="https://i.imgur.com/CcYbm9i.jpeg" alt="Diamond Facial">
       <div class="facial-body">
         <h3>Diamond Facial</h3>
         <p>Premium micro-polishing with diamond particles to refine texture and amplify luminosity.</p>
@@ -249,9 +239,7 @@
 
     <!-- Card 6 -->
     <article class="facial-card">
-      <!-- <div class="facial-media">
-        <img src="https://images.unsplash.com/photo-1544213456-b0b1a2b9f4d6?w=1200&q=80&auto=format&fit=crop" alt="Gold Facial">
-      </div> -->
+      <img src="https://i.imgur.com/QX8cTip.jpeg" alt="Gold Facial">
       <div class="facial-body">
         <h3>Gold Facial</h3>
         <p>Luxurious gold-infused treatment to nourish, firm and bring a visible glow to the skin.</p>
@@ -260,9 +248,7 @@
 
     <!-- Card 7 -->
     <article class="facial-card">
-      <!-- <div class="facial-media">
-        <img src="https://images.unsplash.com/photo-1556228453-9e4d9a9c4f6e?w=1200&q=80&auto=format&fit=crop" alt="Skin Tightening">
-      </div> -->
+      <img src="https://i.imgur.com/sz2sonJ.jpeg" alt="Skin Tightening">
       <div class="facial-body">
         <h3>Skin Tightening Facial</h3>
         <p>Firming and lifting techniques to improve elasticity and reduce the appearance of sagging.</p>
@@ -271,9 +257,7 @@
 
     <!-- Card 8 -->
     <article class="facial-card">
-      <!-- <div class="facial-media">
-        <img src="https://images.unsplash.com/photo-1517841905240-472988babdf9?w=1200&q=80&auto=format&fit=crop" alt="Open Pores Facial">
-      </div> -->
+      <img src="https://i.imgur.com/JIEAqvH.jpeg" alt="Open Pores Facial">
       <div class="facial-body">
         <h3>Open Pores Facial</h3>
         <p>Deep-cleansing and pore-refining treatment to minimize enlarged pores and smooth texture.</p>
@@ -282,20 +266,16 @@
 
     <!-- Card 9 -->
     <article class="facial-card">
-      <!-- <div class="facial-media">
-        <img src="https://images.unsplash.com/photo-1522335789203-aabd1fc54bc9?w=1200&q=80&auto=format&fit=crop" alt="Pimple Facial">
-      </div> -->
+      <img src="https://i.imgur.com/FZHF80F.jpeg" alt="Pimple Facial">
       <div class="facial-body">
         <h3>Pimple / Acne Facial</h3>
         <p>Targeted purification to calm breakouts, reduce inflammation and restore clarity.</p>
       </div>
     </article>
 
-    <!-- Clean-Up Items (grouped) -->
+    <!-- Clean-Ups -->
     <article class="facial-card">
-      <!-- <div class="facial-media">
-        <img src="https://images.unsplash.com/photo-1524758631624-e2822e304c36?w=1200&q=80&auto=format&fit=crop" alt="Normal Clean-Up">
-      </div> -->
+      <img src="https://i.imgur.com/Zk1P4Vx.jpeg" alt="Normal Clean-Up">
       <div class="facial-body">
         <h3>Normal Clean-Up</h3>
         <p>Basic cleansing and refreshing treatment to remove impurities for an instant boost.</p>
@@ -303,9 +283,7 @@
     </article>
 
     <article class="facial-card">
-      <!-- <div class="facial-media">
-        <img src="https://images.unsplash.com/photo-1501004318641-b39e6451bec6?w=1200&q=80&auto=format&fit=crop" alt="Fruit Clean-Up">
-      </div> -->
+      <img src="https://i.imgur.com/OH9CGHH.jpeg" alt="Fruit Clean-Up">
       <div class="facial-body">
         <h3>Fruit Clean-Up</h3>
         <p>Gentle fruit-enzyme clean-up to renew and brighten sensitive skin.</p>
@@ -313,9 +291,7 @@
     </article>
 
     <article class="facial-card">
-      <!-- <div class="facial-media">
-        <img src="https://images.unsplash.com/photo-1523264753432-1b97d9d4a7fb?w=1200&q=80&auto=format&fit=crop" alt="Wine Clean-Up">
-      </div> -->
+      <img src="https://i.imgur.com/napu7PE.jpeg" alt="Wine Clean-Up">
       <div class="facial-body">
         <h3>Wine Clean-Up</h3>
         <p>Antioxidant cleanse to refresh skin and enhance natural radiance.</p>
@@ -323,9 +299,7 @@
     </article>
 
     <article class="facial-card">
-      <!-- <div class="facial-media">
-        <img src="https://images.unsplash.com/photo-1515378791036-0648a3ef77b2?w=1200&q=80&auto=format&fit=crop" alt="Gold Clean-Up">
-      </div> -->
+      <img src="https://i.imgur.com/AXYzNMz.jpeg" alt="Gold Clean-Up">
       <div class="facial-body">
         <h3>Gold Clean-Up</h3>
         <p>Luxurious cleanse that nourishes and primes the skin for glow-enhancing results.</p>
@@ -333,9 +307,7 @@
     </article>
 
     <article class="facial-card">
-      <!-- <div class="facial-media">
-        <img src="https://images.unsplash.com/photo-1506086679523-4f4b7d9e3a6a?w=1200&q=80&auto=format&fit=crop" alt="Aloe Vera Clean-Up">
-      </div> -->
+      <img src="https://i.imgur.com/W44b5nK.jpeg" alt="Aloe Vera Clean-Up">
       <div class="facial-body">
         <h3>Aloe Vera Clean-Up</h3>
         <p>Soothing, calming clean-up perfect for sensitive or irritated skin.</p>
@@ -344,6 +316,7 @@
 
   </div>
 </section>
+
 
 
 
