--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
                             data-param10="" 
                             data-description="">
                                 <!-- MAIN IMAGE -->
-                                <img src="images/home/780.jpg"  alt=""  data-lazyload="images/home/780.jpg" data-bgposition="center center" 
+                                <img src="images/home/saloon1.jpg"  alt=""  data-lazyload="images/home/saloon1.jpg" data-bgposition="center center" 
                                 data-bgfit="cover" data-bgparallax="4" class="rev-slidebg" data-no-retina>
                                 <!-- LAYERS -->
                                 
