--- a/massage&wellness.html
+++ b/massage&wellness.html
@@ -190,11 +190,11 @@
     <p>Holistic and therapeutic massages designed to soothe, detoxify and restore balance—performed by expert therapists using premium oils and traditional techniques.</p>
   </div>
 
-  <!-- Row 1: Aroma Body Massage -->
+  <!-- Row 1 -->
   <div class="apsara-row">
-    <!-- <div class="apsara-row-media">
-      <img src="https://images.unsplash.com/photo-1501004318641-b39e6451bec6?w=1200&q=80&auto=format&fit=crop" alt="Aroma Body Massage with essential oils">
-    </div> -->
+    <div class="apsara-row-media">
+      <img src="https://i.imgur.com/kqBcGfP.jpeg" alt="Aroma Body Massage">
+    </div>
     <div class="apsara-row-content">
       <h3>Aroma Body Massage (60 mins)</h3>
       <p>A soothing aromatic therapy using essential oils to melt away stress, uplift the mood, and deeply relax the entire body.</p>
@@ -202,11 +202,11 @@
     </div>
   </div>
 
-  <!-- Row 2: Deep Tissue Massage -->
+  <!-- Row 2 -->
   <div class="apsara-row reverse">
-    <!-- <div class="apsara-row-media">
-      <img src="https://images.unsplash.com/photo-1556228453-9e4d9a9c4f6e?w=1200&q=80&auto=format&fit=crop" alt="Deep tissue therapeutic massage">
-    </div> -->
+    <div class="apsara-row-media">
+      <img src="https://i.imgur.com/iDvDajz.jpeg" alt="Deep Tissue Massage">
+    </div>
     <div class="apsara-row-content">
       <h3>Deep Tissue Massage (60 mins)</h3>
       <p>Targets deep muscle layers to relieve chronic tension, improve mobility and reduce long-standing pain using firm, precise strokes.</p>
@@ -214,11 +214,11 @@
     </div>
   </div>
 
-  <!-- Row 3: Normal & Full Body Massage -->
+  <!-- Row 3 -->
   <div class="apsara-row">
-    <!-- <div class="apsara-row-media">
-      <img src="https://images.unsplash.com/photo-1544367567-0f2fcb009e3b?w=1200&q=80&auto=format&fit=crop" alt="Full body relaxing massage">
-    </div> -->
+    <div class="apsara-row-media">
+      <img src="https://i.imgur.com/Es32xKR.jpeg" alt="Normal & Full Body Massage">
+    </div>
     <div class="apsara-row-content">
       <h3>Normal / Full Body Massage (45 mins)</h3>
       <p>Choose from a gentle relaxation massage or a full-body session to improve circulation, calm the nervous system and ease mild aches.</p>
@@ -230,23 +230,23 @@
     </div>
   </div>
 
-  <!-- Row 4: Body Polishing -->
+  <!-- Row 4 -->
   <div class="apsara-row reverse">
-    <!-- <div class="apsara-row-media">
-      <img src="https://images.unsplash.com/photo-1503264116251-35a269479413?w=1200&q=80&auto=format&fit=crop" alt="Body polishing spa treatment">
-    </div> -->
+    <div class="apsara-row-media">
+      <img src="https://i.imgur.com/F2D6G7Z.jpeg" alt="Body Polishing">
+    </div>
     <div class="apsara-row-content">
       <h3>Body Polishing (45 mins)</h3>
-      <p>A revitalising exfoliation that sloughs away dead cells, refines texture and reveals soft, glowing skin—perfect before special events or treatments.</p>
+      <p>A revitalising exfoliation that sloughs away dead cells, refines texture and reveals soft, glowing skin—perfect before special events.</p>
       <a class="btn" href="#booking">Book Body Polish</a>
     </div>
   </div>
 
-  <!-- Row 5: Chakra Massage & Foot Reflexology -->
+  <!-- Row 5 -->
   <div class="apsara-row">
-    <!-- <div class="apsara-row-media">
-      <img src="https://images.unsplash.com/photo-1515378791036-0648a3ef77b2?w=1200&q=80&auto=format&fit=crop" alt="Chakra balancing massage and foot reflexology">
-    </div> -->
+    <div class="apsara-row-media">
+      <img src="https://i.imgur.com/lzTib4k.jpeg" alt="Chakra Massage & Foot Reflexology">
+    </div>
     <div class="apsara-row-content">
       <h3>Chakra Body Massage & Foot Reflexology</h3>
       <p>Energy-based chakra massage to harmonize vital points plus targeted foot reflexology to stimulate organ systems and promote deep relaxation.</p>
@@ -258,11 +258,11 @@
     </div>
   </div>
 
-  <!-- Row 6: Cupping & Marmam Massage -->
+  <!-- Row 6 -->
   <div class="apsara-row reverse">
-    <!-- <div class="apsara-row-media">
-      <img src="https://images.unsplash.com/photo-1544375561-1b2a1e0f7b6f?w=1200&q=80&auto=format&fit=crop" alt="Cupping therapy and marmam massage">
-    </div> -->
+    <div class="apsara-row-media">
+      <img src="https://i.imgur.com/9Jk5al8.jpeg" alt="Cupping & Marmam Massage">
+    </div>
     <div class="apsara-row-content">
       <h3>Cupping Massage & Marmam Body Massage</h3>
       <p>Cupping to enhance circulation and detox, paired with Marmam (Ayurvedic point therapy) that awakens vital energy and supports healing.</p>
@@ -270,11 +270,11 @@
     </div>
   </div>
 
-  <!-- Row 7: Three Prakriti Massage -->
+  <!-- Row 7 -->
   <div class="apsara-row">
-    <!-- <div class="apsara-row-media">
-      <img src="https://images.unsplash.com/photo-1542291026-7eec264c27ff?w=1200&q=80&auto=format&fit=crop" alt="Ayurvedic prakriti massage">
-    </div> -->
+    <div class="apsara-row-media">
+      <img src="https://i.imgur.com/TqG1wUu.jpeg" alt="Three Prakriti Massage">
+    </div>
     <div class="apsara-row-content">
       <h3>Three Prakriti Massage (Vata • Pitta • Kapha)</h3>
       <p>An Ayurvedic treatment personalised to your constitution—Vata, Pitta or Kapha—designed to restore balance and enhance vitality.</p>
@@ -282,26 +282,26 @@
     </div>
   </div>
 
-  <!-- Row 8: Mud Pack (Therapeutic) -->
+  <!-- Row 8 -->
   <div class="apsara-row reverse">
-    <!-- <div class="apsara-row-media">
-      <img src="https://images.unsplash.com/photo-1531835553285-8366b8d3f4a9?w=1200&q=80&auto=format&fit=crop" alt="Therapeutic mud pack treatment">
-    </div> -->
+    <div class="apsara-row-media">
+      <img src="https://i.imgur.com/k8Wnhzp.jpeg" alt="Mud Pack Therapy">
+    </div>
     <div class="apsara-row-content">
       <h3>Mud Pack Therapy</h3>
-      <p>Detoxifying and restorative mud treatments tailored for conditions like digestion support, PCOS/PCOD care and targeted therapeutic needs.</p>
+      <p>Detoxifying and restorative mud treatments tailored for digestion, PCOS/PCOD care and full-body relaxation.</p>
       <a class="btn" href="#booking">Book Mud Pack</a>
     </div>
   </div>
 
-  <!-- Row 9: Lichi Therapy -->
+  <!-- Row 9 -->
   <div class="apsara-row">
-    <!-- <div class="apsara-row-media">
-      <img src="https://images.unsplash.com/photo-1576085899113-ef5d5f3d4f20?w=1200&q=80&auto=format&fit=crop" alt="Lichi therapy skin hydration and rejuvenation">
-    </div> -->
+    <div class="apsara-row-media">
+      <img src="https://i.imgur.com/PMmUXO0.jpeg" alt="Lichi Therapy">
+    </div>
     <div class="apsara-row-content">
       <h3>Lichi Therapy</h3>
-      <p>A refreshing treatment using litchi-based ingredients to hydrate, nourish and gently rejuvenate the skin for a delicate, natural glow.</p>
+      <p>A refreshing treatment using litchi-based extracts to hydrate, nourish and rejuvenate the skin for a delicate, youthful glow.</p>
       <a class="btn" href="#booking">Book Lichi Therapy</a>
     </div>
   </div>
