--- a/threading.html
+++ b/threading.html
@@ -183,7 +183,7 @@
             </div>
             <!-- INNER PAGE BANNER END -->
 
-            <section class="apsara-threading" id="threading-services">
+        <section class="apsara-threading" id="threading-services">
   <div class="threading-title">
     <span>Precision & Care</span>
     <h2>Threading Services</h2>
@@ -192,50 +192,65 @@
 
   <div class="threading-grid">
 
-    <article class="thread-card">
-      <div class="thread-icon" aria-hidden="true">✧</div>
-      <h3>Eyebrows</h3>
-      <p>Expert shaping to enhance your natural brow arch and bring balance to the face.</p>
-    </article>
-
-    <article class="thread-card">
-      <div class="thread-icon" aria-hidden="true">✧</div>
-      <h3>Upper Lips</h3>
-      <p>Quick, gentle removal of upper lip hair for a smooth, polished look.</p>
-    </article>
-
-    <article class="thread-card">
-      <div class="thread-icon" aria-hidden="true">✧</div>
-      <h3>Lower Lips</h3>
-      <p>Neat removal of fine hair on the lower lip for a tidy, flawless finish.</p>
-    </article>
-
-    <article class="thread-card">
-      <div class="thread-icon" aria-hidden="true">✧</div>
-      <h3>Chin</h3>
-      <p>Precise chin hair removal that minimizes redness and leaves skin smooth.</p>
-    </article>
-
-    <article class="thread-card">
-      <div class="thread-icon" aria-hidden="true">✧</div>
-      <h3>Forehead</h3>
-      <p>Delicate clearing of fine forehead hair to brighten and refresh your facial appearance.</p>
-    </article>
-
-    <article class="thread-card">
-      <div class="thread-icon" aria-hidden="true">✧</div>
-      <h3>Side Cheeks</h3>
-      <p>Clean and soften the side facial area for improved contour and a polished look.</p>
-    </article>
-
     <article class="thread-card full-face">
-      <div class="thread-icon" aria-hidden="true">✧</div>
-      <h3>Full Face Threading</h3>
-      <p>A comprehensive facial threading service to remove unwanted hair and leave skin refined and radiant.</p>
+      <img src="https://i.imgur.com/VUqEtnu.jpeg" alt="Eyebrows Threading">
+      <div class="thread-content">
+        <h3>Eyebrows</h3>
+        <p>Expert shaping to enhance your natural brow arch and bring balance to the face.</p>
+      </div>
+    </article>
+
+    <article class="thread-card">
+      <img src="https://i.imgur.com/W8Epyu5.jpeg" alt="Upper Lips Threading">
+      <div class="thread-content">
+        <h3>Upper Lips</h3>
+        <p>Quick, gentle removal of upper lip hair for a smooth, polished look.</p>
+      </div>
+    </article>
+
+    <article class="thread-card">
+      <img src="https://i.imgur.com/VSqPsds.jpeg" alt="Lower Lips Threading">
+      <div class="thread-content">
+        <h3>Lower Lips</h3>
+        <p>Neat removal of fine hair on the lower lip for a tidy, flawless finish.</p>
+      </div>
+    </article>
+
+    <article class="thread-card">
+      <img src="https://i.imgur.com/wd1nA3u.jpeg" alt="Chin Threading">
+      <div class="thread-content">
+        <h3>Chin</h3>
+        <p>Precise chin hair removal that minimizes redness and leaves skin smooth.</p>
+      </div>
+    </article>
+
+    <article class="thread-card">
+      <img src="https://i.imgur.com/S3mL94C.jpeg" alt="Forehead Threading">
+      <div class="thread-content">
+        <h3>Forehead</h3>
+        <p>Delicate clearing of fine forehead hair to brighten and refresh your facial appearance.</p>
+      </div>
+    </article>
+
+    <article class="thread-card">
+      <img src="https://i.imgur.com/DSFnzCk.jpeg" alt="Side Cheeks Threading">
+      <div class="thread-content">
+        <h3>Side Cheeks</h3>
+        <p>Clean and soften the side facial area for improved contour and a polished look.</p>
+      </div>
+    </article>
+
+    <article class="thread-card">
+      <img src="https://i.imgur.com/dxBB4u8.jpeg" alt="Full Face Threading">
+      <div class="thread-content">
+        <h3>Full Face Threading</h3>
+        <p>A comprehensive facial threading service to remove unwanted hair and leave skin refined and radiant.</p>
+      </div>
     </article>
 
   </div>
 </section>
+
 
 
     
