--- a/waxingservice.html
+++ b/waxingservice.html
@@ -183,7 +183,7 @@
             </div>
             <!-- INNER PAGE BANNER END -->
 
-            <section class="apsara-waxing">
+        <section class="apsara-waxing">
 
     <div class="wax-title">
         <span>Smooth & Gentle Care</span>
@@ -193,104 +193,105 @@
 
     <div class="wax-grid">
 
-        <!-- Face Normal -->
         <div class="wax-card">
+            <img src="images/wax/face-normal.jpg" alt="Face Wax Normal">
             <h3>Face Wax (Normal)</h3>
             <p>Gentle full-face waxing to remove fine hair and enhance natural glow.</p>
         </div>
 
-        <!-- Face Rica -->
         <div class="wax-card">
+            <img src="images/wax/face-rica.jpg" alt="Face Wax Rica">
             <h3>Face Wax (Rica)</h3>
             <p>Premium Rica formula designed for sensitive skin with a smooth finish.</p>
         </div>
 
-        <!-- Hand Wax Normal -->
         <div class="wax-card">
+            <img src="images/wax/hand-normal.jpg" alt="Hand Wax Normal">
             <h3>Hand Wax (Normal)</h3>
             <p>Clean and smooth hands with quick and effective waxing.</p>
         </div>
 
-        <!-- Hand Wax Rica -->
         <div class="wax-card">
+            <img src="images/wax/hand-rica.jpg" alt="Hand Wax Rica">
             <h3>Hand Wax (Rica)</h3>
             <p>Soft, nourished skin using Rica's skin-friendly formula.</p>
         </div>
 
-        <!-- Underarms Normal -->
         <div class="wax-card">
+            <img src="images/wax/underarm-normal.jpg" alt="Underarms Normal">
             <h3>Underarms (Normal)</h3>
             <p>Quick, clean and smooth waxing for refreshed underarms.</p>
         </div>
 
-        <!-- Underarms Rica -->
         <div class="wax-card">
+            <img src="images/wax/underarm-rica.jpg" alt="Underarms Rica">
             <h3>Underarms (Rica)</h3>
             <p>Gentle waxing to avoid irritation and maintain softness.</p>
         </div>
 
-        <!-- Full Leg Normal -->
         <div class="wax-card">
+            <img src="images/wax/fullleg-normal.jpg" alt="Full Leg Normal">
             <h3>Full Leg (Normal)</h3>
             <p>Long-lasting smoothness with clean and effective waxing.</p>
         </div>
 
-        <!-- Full Leg Rica -->
         <div class="wax-card">
+            <img src="images/wax/fullleg-rica.jpg" alt="Full Leg Rica">
             <h3>Full Leg (Rica)</h3>
             <p>Premium waxing for silky legs with reduced sensitivity.</p>
         </div>
 
-        <!-- Half Leg Normal -->
         <div class="wax-card">
+            <img src="images/wax/halfleg-normal.jpg" alt="Half Leg Normal">
             <h3>Half Leg (Normal)</h3>
             <p>Quick waxing for soft and smooth skin on lower or upper legs.</p>
         </div>
 
-        <!-- Half Leg Rica -->
         <div class="wax-card">
+            <img src="images/wax/halfleg-rica.jpg" alt="Half Leg Rica">
             <h3>Half Leg (Rica)</h3>
             <p>A gentle experience perfect for dry or sensitive skin.</p>
         </div>
 
-        <!-- Body Wax Normal -->
         <div class="wax-card">
+            <img src="images/wax/body-normal.jpg" alt="Body Wax Normal">
             <h3>Body Wax (Normal)</h3>
             <p>Complete body waxing for clean, hair-free and glowing skin.</p>
         </div>
 
-        <!-- Body Wax Rica -->
         <div class="wax-card">
+            <img src="images/wax/body-rica.jpg" alt="Body Wax Rica">
             <h3>Body Wax (Rica)</h3>
             <p>Full-body waxing using Rica wax for smoother and softer skin.</p>
         </div>
 
-        <!-- Bikini Wax Normal -->
         <div class="wax-card">
+            <img src="images/wax/bikini-normal.jpg" alt="Bikini Normal">
             <h3>Bikini Wax (Normal)</h3>
             <p>Basic bikini-line waxing for neat and clean grooming.</p>
         </div>
 
-        <!-- Bikini Wax Rica -->
         <div class="wax-card">
+            <img src="images/wax/bikini-rica.jpg" alt="Bikini Rica">
             <h3>Bikini Wax (Rica)</h3>
             <p>A gentle Rica bikini wax ideal for sensitive areas.</p>
         </div>
 
-        <!-- Brazilian Underarms -->
         <div class="wax-card">
+            <img src="images/wax/brazilian-underarm.jpg" alt="Brazilian Underarms">
             <h3>Brazilian Wax – Underarms</h3>
             <p>Deep-clean waxing for smooth and long-lasting results.</p>
         </div>
 
-        <!-- Brazilian Face -->
         <div class="wax-card">
+            <img src="images/wax/brazilian-face.jpg" alt="Brazilian Face">
             <h3>Brazilian Wax – Face</h3>
             <p>Precision waxing with minimal irritation for delicate areas.</p>
         </div>
 
     </div>
 </section>
+
 <!-- WHY CHOOSE US -->
   <div class="why-container pt-2 pb-4">
     <h2 class="why-title">Why Choose Us</h2>
