--- a/index.html
+++ b/index.html
@@ -1494,7 +1494,7 @@ you a unique result. We will provide you with the highest quality of our service
                                 </div>
                             </div>
                             
-                        	<div class="col-xl-6 col-lg-5 col-md-12 bg-cover discount-add-pic  bg-bottom-center" style="background-image:url(/html/images/home/appointment.jpg);">
+                        	<div class="col-xl-6 col-lg-5 col-md-12 bg-cover discount-add-pic  bg-bottom-center" style="background-image:url(images/home/appointment.jpg);">
 
                             </div>                              
                         
