--- a/index.html
+++ b/index.html
@@ -2170,7 +2170,7 @@ you a unique result. We will provide you with the highest quality of our service
                                 <div class="logo-footer clearfix p-b15">
                                     <a href="index.html"><img src="images/home/main logo_page-0001.jpg" alt="image" width="100px" ></a>
                                 </div>
-                                <p>Lorem ipsum dolor sit amet, consectetur adip iscing elit, sed do eiusmod temporin cididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.eiusmod tempo.</p>
+                                <p>Apsara Salon aims to enhance every client’s natural beauty by delivering premium beauty, grooming, and wellness services with exceptional care and professionalism</p>
                                
                                 <div class="newsletter-input">
                                   <div class="input-group">
